--- a/vignettes/ztable.Rmd
+++ b/vignettes/ztable.Rmd
@@ -229,15 +229,6 @@ You can customize the striping when printing.
 print(z1,zebra.color=c(rep("white",5),"peach"),zebra.colnames=TRUE)
 ```
 
-## Horizontal and vertical striping
-You can use both horizontal and vertical striping or change the backgroung of any cell by setting the parameter 'zebra.type=3' with the parameter zebra.list. 
-Parameter 'zebra.list' sets the cells specified with cells[y,x] with "color". The y and x are integer indicating rows and columns. NA value of y or x indicating all columns or rows. Plaese note that the row count start from the column names row, and the column count start from the row names column.
-
-```{r,results='asis'}
-zlist=list(y=c(3,NA,3,6),x=c(NA,4,4,6),color=c("platinum","peach","darkchampagne","scarlet"))
-z1=update_ztable(z1,zebra.list=zlist,zebra.type=3)
-print(z1)
-```
 
 ## Change the background color of all cells
 
@@ -256,7 +247,7 @@ ztable(head(iris),zebra=0,zebra.type=0,zebra.color=1:7,zebra.colnames=TRUE)
 ztable(head(mtcars[,1:9]),zebra=0,zebra.type=0,zebra.color=1:9,zebra.colnames=TRUE)
 ```
 
-## Two hundereds background colors
+## Two hundred background colors
 
 This is demonstration of 200 background colors. All 749 colors are available in package ztable. Please type ?zcolors. 
 ```{r,results='asis'}
@@ -272,3 +263,65 @@ a=data.frame(a,stringsAsFactors=FALSE,row.names=NULL)
 ztable(a,zebra=0,zebra.type=0,zebra.color=mycolor,include.rownames=FALSE,
        include.colnames=FALSE,longtable=TRUE)
 ```
+
+
+# Add row colors, column colors and cell colors
+
+```{r,results='asis'}
+options(ztable.zebra=NULL)
+z=ztable(head(mtcars))
+z
+z=addRowColor(z,c(4,7),color="pink")
+z=addColColor(z,7,color="amber")
+z=addCellColor(z,cols=7,rows=c(4,7),color="orange")
+z
+```
+
+# Add row groups
+
+```{r,results='asis'}
+rgroup=c("Group A","Group B")
+n.rgroup=c(4,2)
+z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup)
+z
+z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup,cspan.rgroup=1)
+z=addColColor(z,7,color="amber")
+z
+```
+
+# Add column groups
+
+```{r,results='asis'}
+z=ztable(head(mtcars),digits=0)
+z=addColColor(z,10,color="platinum")
+cgroup=c("Group A","Group B","Group C")
+n.cgroup=c(3,4,4)
+cgroupcolor=c("white","white","white","platinum")
+z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup,cgroupcolor=cgroupcolor)
+z
+```
+
+# Add complex column groups
+
+```{r,results='asis'}
+z=ztable(head(iris))
+cgroup=c("Total",NA,NA)
+cgroup1=c("Group","Species",NA)
+cgroup2=c("SEPAL","PETAL","Species")
+cgroup=rbind(cgroup,cgroup1,cgroup2)
+n.cgroup=matrix(c(5,NA,NA,4,1,NA,2,2,1),byrow=TRUE,nrow=3)
+z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup)
+z
+```
+
+# Add complex column groups and row groups with column groups color
+```{r,results='asis'}
+cgroupcolor=matrix(c("white","white","white","white","white","platinum","white","white",
+                     "white","cyan","platinum","white"),byrow=TRUE,nrow=3)
+z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup,cgroupcolor=cgroupcolor)
+z=addrgroup(z,rgroup=c("1to4","5to6"),n.rgroup=c(4,2),cspan.rgroup=1)
+z=addColColor(z,3,"cyan")
+z=addColColor(z,5,"platinum")
+z
+```
+
