--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+ztable 0.1.4
+============
+(3-Feb-2015)
+
+* "ztable" supports merging cells by "spanRow" and "spanCol" function
+
+* new function added "vlines" which add and delete vertical lines of ztable easily
+
+* "ztable"" puts horizontal space between column groups without vertical lines,
+  but puts no space when vertical line is present between column groups.
+
+
 ztable 0.1.3
 ============
 (18-JAN-2015)
