--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 ztable 0.1.4
 ============
-(3-Feb-2015)
+(6-Feb-2015)
 
 * "ztable" supports merging cells by "spanRow" and "spanCol" function
 
@@ -8,6 +8,9 @@ ztable 0.1.4
 
 * "ztable"" puts horizontal space between column groups without vertical lines,
   but puts no space when vertical line is present between column groups.
+
+* "ztable" supports an R object of mytable and cbind.mytable class from the package
+  "moonBook"
 
 
 ztable 0.1.3
