--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+ztable 0.1.5
+============
+(12-Feb-2015)
+
+* new function added "hlines" which add and delete horizontal lines of ztable easily
+
+* "ztable" supports an R object of nls and fitdistr class
+
+* bug fixed
+
+
 ztable 0.1.4
 ============
 (6-Feb-2015)
