--- a/vignettes/ztable.Rmd
+++ b/vignettes/ztable.Rmd
@@ -105,8 +105,8 @@ cgroup=c("Top 10","Last 10")
 n.cgroup=c(3,3)
 z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup)
 z 
-rgroup=c("Top 1-3","Top 4-6"," Top 7-10")
-n.rgroup=c(3,3,4)
+rgroup=c("Top 1-3","Top 4-5",NA," Top 7-10")
+n.rgroup=c(3,2,1,4)
 z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup,cspan.rgroup=1)
 z
 z=addRowColor(z,c(5,10),"pink")
@@ -116,6 +116,7 @@ z
 z=spanCol(z,row=2,from=2,to=3,color="lightcyan")
 z=spanRow(z,col=7,from=7,to=8,color="cyan")
 z
+hlines(z,type=1)
 ```
 
 And you can adjust vertical lines, too.
