--- a/test.Rmd
+++ b/test.Rmd
@@ -79,12 +79,18 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r,results='asis'}
 require(ztable)
-z<-ztable(head(iris),zebra=2,zebra.color="platinum",colnames.bold=TRUE)
-z=addFrontColor(z,cols=1:6,rows=1,color="white")
-z=addFrontColor(z,cols=1:6,rows=2,color="red")
-z=addCellColor(z,cols=1:6,rows=1,color="blue")
-z$frontcolor
+z=ztable(head(iris),zebra=1)
+cgroup=c("Sepal","Petal","Species")
+n.cgroup=c(2,2,1)
+z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup,color="red")
+# cgroup2=c("Length","Species")
+# n.cgroup2=c(4,1)
+# z=addcgroup(z,cgroup=cgroup2,n.cgroup=n.cgroup2,top=TRUE)
+rgroup=c("OneToThree","Four","FiveToSix")
+n.rgroup=c(3,1,2)
+z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup,color=c("blue","red","yellow"))
 print(z,type="latex")
+
 ```
 
 
