--- a/vignettes/ztable.Rmd
+++ b/vignettes/ztable.Rmd
@@ -17,6 +17,7 @@ Package "ztable" make everything possible about table. Basically, An object of "
 
 ```{r,results='asis'}
 library(ztable)
+library(magrittr)
 options(ztable.type="html")
 z=ztable(head(iris))
 z
@@ -28,13 +29,19 @@ z=ztable(head(iris),align="cccccc")
 z
 ```
 
-You can change backgroud color with addRowColor() and font color with addFrontColor() function.
+You can change background color and font color with addRowColor() function.
 
 ```{r,results='asis'}
-require(magrittr)
+z <- ztable(head(iris))
+z <- addRowColor(z, rows=1,bg="#C90000",color="white") 
+print(z)
+```
+
+The pipe operator("%>%") from magrittr package can simplify your R code. 
+
+```{r,results='asis'}
 ztable(head(iris)) %>%
-    addRowColor(rows=1,color="#C90000") %>%
-    addFrontColor(rows=1,cols=1:6,color="white") %>%
+    addRowColor(rows=1,bg="#C90000",color="white") %>%
     print
 
 ```
@@ -44,7 +51,8 @@ You can add column groups to ztable using addcgroup function. The n.cgroup means
 ```{r,results='asis'}
 cgroup=c("Sepal","Petal","Species")
 n.cgroup=c(2,2,1)
-z=addcgroup(z,cgroup=cgroup,n.cgroup=n.cgroup)
+z <- ztable(head(iris)) %>%
+    addcgroup(cgroup=cgroup,n.cgroup=n.cgroup)
 z
 ```
 
@@ -55,7 +63,8 @@ You can add row groups to ztable using addrgroup function. The n.rgroup means ho
 rgroup=c("OneToThree","Four","FiveToSix")
 n.rgroup=c(3,1,2)
 
-z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup,cspan.rgroup=1)
+z <- z %>% 
+    addrgroup(rgroup=rgroup,n.rgroup=n.rgroup,cspan.rgroup=1)
 z
 print(z,type="latex")
 ```
@@ -72,8 +81,8 @@ z
 You can merge cells by spanRow or spanCol function.
 
 ```{r,results='asis'}
-z=spanRow(z,col=2,from=4,to=7,"orange")
-z=spanRow(z,col=3,from=5,to=7,"platinum")
+z=spanRow(z,col=2,from=4,to=7,bg="lightcyan",color="red")
+z=spanRow(z,col=3,from=5,to=7,"platinum","blue")
 z=spanRow(z,col=4,from=6,to=7,"cyan")
 z=spanRow(z,col=5,from=5,to=7,"yellow")
 z=spanRow(z,col=6,from=3,to=5,"yellow")
@@ -88,9 +97,9 @@ You can add or adjust vertical lines of table by vlines function
 
 ```{r,results='asis'}
 vlines(z,type="all")       # type=1 gets same result
-z=vlines(z,type="none")      # type=0 gets same result
+z <- vlines(z,type="none")      # type=0 gets same result
 z
-z=vlines(z,add=c(1,2,5))
+z <- z %>% vlines(add=c(1,2,5))
 z
 ```
 
@@ -120,12 +129,14 @@ rgroup=c("Top 1-3","Top 4-5",NA," Top 7-10")
 n.rgroup=c(3,2,1,4)
 z=addrgroup(z,rgroup=rgroup,n.rgroup=n.rgroup,cspan.rgroup=1)
 z
-z=addRowColor(z,c(5,10),"pink")
-z=addColColor(z,4,"amber")
-z=addCellColor(z,rows=c(5,10),cols=4,"orange")
+z <- z %>% 
+    addRowColor(c(5,10),"pink") %>%
+    addColColor(4,"amber") %>%
+    addCellColor(rows=c(5,10),cols=4,"red","white")
 z
-z=spanCol(z,row=2,from=2,to=3,color="lightcyan")
-z=spanRow(z,col=7,from=7,to=8,color="cyan")
+z <- z %>%
+    spanCol(row=2,from=2,to=3,"lightcyan","red") %>%
+    spanRow(col=7,from=7,to=8,"cyan")
 z
 hlines(z,type=1)
 ```
@@ -233,6 +244,7 @@ ztable(out)
 Again, 'ztable()' also shows the anova table of this model.
 
 ```{r,results='asis'}
+anova(out)
 ztable(anova(out))
 ```
 
@@ -445,8 +457,8 @@ You can use all ztable related function in this table.
 ```{r,results='asis'}
 z=addRowColor(z,c(13,16),"platinum")
 z=addColColor(z,c(5,8),"pink")
-z=addCellColor(z,rows=16,cols=c(5,8),color="orange")
-z=addCellColor(z,rows=13,cols=5,color="orange")
+z=addCellColor(z,rows=16,cols=c(5,8),bg="orange")
+z=addCellColor(z,rows=13,cols=5,bg="orange")
 z
 ```
 
@@ -460,8 +472,8 @@ z=ztable(res1)
 z %>%
    addRowColor(c(13,16),"platinum") %>%
    addColColor(c(5,8),"pink") %>%
-   addCellColor(rows=16,cols=c(5,8),color="orange") %>%
-   addCellColor(rows=13,cols=5,color="orange") %>%
+   addCellColor(rows=16,cols=c(5,8),bg="orange") %>%
+   addCellColor(rows=13,cols=5,bg="orange") %>%
    print        
 ```
 
